# exampleAppWithKafka

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  configuration.toml.example  docker-compose.yml  pyproject.toml
src/: cli.py
src/api/: movements.py  root_router.py  warehouse.py
src/application/interactors/: get_movement.py  get_product_on_wh.py  product_movement.py
src/core/: config.py  default_exception.py  logger.py
src/di/: ioc.py
src/di/providers/: context.py  db.py  interactors.py  repositories.py
src/domain/: exceptions.py
src/domain/entities/: movement.py  product.py  product_on_wh.py  warehouse.py
src/domain/entities/common/: entities_enums.py
src/domain/interfaces/: uow.py
src/domain/interfaces/repositories/: movement.py  product.py  product_on_wh.py  warehouse.py
src/infrastructure/: uow.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 4e56719c5d78_add_quantity_and_destination_source_.py  ff27ad2c156b_init_migration.py
src/infrastructure/models/: __init__.py  mapping.py  registry.py
src/infrastructure/repositories/: movement.py  product.py  product_on_wh.py  warehouse.py
src/mq/: routes.py
src/mq/dto/inn/: movement_event.py
src/mq/handlers/: __init__.py  movement.py
